# prisma-unreachable-code-reproduction

./: .env  Cargo.toml  README.md  startMongoReplicate.ps1
.cargo/: config.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
repro/: Cargo.toml
repro/src/: database.rs  main.rs  prisma.rs
