[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"
authors = ["Phill030"]

[features]
mongodb = ["prisma-client-rust-cli/mongodb"]

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9", default-features = false, features = [
    "mongodb",
] }
